# stock-ai

./: ._src  .env  .env.example  .eslintrc.cjs  .gitignore  AI-Stock-终极架构-Opus定稿.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  index.html  manifest.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.cursor/rules/: 000-overview.mdc  010-backend.mdc  020-trading-core.mdc  030-ai-engine.mdc  040-frontend.mdc  050-tests.mdc
alembic/: env.py
alembic/versions/: a5a6407db4fd_init_users.py  p0f2_multi_schema.py  p1_agent_marketplace.py  p1f3_hosted_trading.py  p1f4_kline_unique.py  p2_agent_console.py
app/: main.py  main.py.bak
app/agents/: __init__.py  llm_client.py  orchestrator.py  prompts.py  state.py  transports.py
app/core/: __init__.py  config.py  config_compliance.py  database.py  exceptions.py  security.py
app/engine/: __init__.py  hedge_fund_client.py  market_data.py  risk_manager.py  scheduler.py  signal_generator.py
app/integrations/: __init__.py
app/middleware/: __init__.py  audit.py  compliance.py
app/models/: __init__.py  agent.py  broadcast.py  kline.py  points.py  signals.py  stock.py  trading.py  user.py
app/schemas/: __init__.py  advisor.py  agent.py  auth.py  broadcast.py  committee.py  events.py  feedback.py  hosted.py  market.py  metrics.py  notifications.py  points.py  prescreen.py  selection.py  signals.py  stock.py  trading.py
app/scripts/: seed_agents.py
app/selection/: prescreen.py
app/services/: __init__.py  advisor.py  broadcast.py  committee_service.py  hosted.py  hosted_engine.py  llm.py  (+7 more)
deploy/: stockai-kline.service  stockai-kline.timer
docs/: API-CONTRACT-advisor.md  BOUNDARY.md  HANDOFF-QCLAW.md  HANDOFF.md  PROTOCOL-api-contract.md  RELEASE-CHECKLIST.md  TEAM-CHARTER.md  TEAM-DEPLOYMENT.md  TEST-PLAN.md  WORKTREE.md
scripts/: backfill_kline.py
src/: manifest.json  pages.json  uni.scss
tests/: conftest.py
(+153 files in other folders)
